cmake_minimum_required(VERSION 3.21)
project(STL_)

set(CMAKE_CXX_STANDARD 11)

add_executable(STL_ main.cpp 01_基础问题/01分析基础.cpp 01_基础问题/assist.h 02_allocator/test.cpp 02_allocator/jjalloc.h 03_迭代器/3_1_find.cpp 03_迭代器/3_2_1_auto_ptr.cpp 03_迭代器/3_2_2_mylist.h 03_迭代器/3_2_3_myList_test.cpp 03_迭代器/3_2_4_myListIter.h 03_迭代器/3_2_5_MyList_Iter_Test.cpp 03_迭代器/3_4_1_traits.cpp 03_迭代器/3_4_2_traits.cpp 03_迭代器/3_4_3_traitrs.cpp)
